--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/test-utils": "^2.4.5",
@@ -25,6 +26,8 @@
     "jsdom": "^24.0.0",
     "start-server-and-test": "^2.0.3",
     "vite": "^5.2.8",
-    "vitest": "^1.4.0"
+    "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^1.4.0",
+    "vuetify": "^3.6.4"
   }
 }
