--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "apexcharts": "^3.49.1",
     "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-apexcharts": "^1.5.3"
   },
   "devDependencies": {
     "@mdi/js": "^7.4.47",
