fix(scripts): 🛠️ Ajustar comandos de inicio para Windows
Se han realizado cambios en los comandos de inicio para soportar tanto Windows como macOS al copiar los archivos de configuración de entorno. Esto mejora la portabilidad del proyecto y asegura que los desarrolladores en diferentes sistemas operativos puedan ejecutar el entorno de desarrollo y producción sin contratiempos.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "start:dev": "cp ./src/config/.env.development .env && vite",
-    "start:prod": "cp ./src/config/.env.production .env && vite",
+    "start:dev": "copy .\\src\\config\\.env.development .env && vite",
+    "start:prod": "copy .\\src\\config\\.env.production .env && vite",
+    "start:dev-mac": "cp ./src/config/.env.development .env && vite",
+    "start:prod-mac": "cp ./src/config/.env.production .env && vite",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
